feat: Nested testing (#24)